--- a/templates/challenge/show.html.twig
+++ b/templates/challenge/show.html.twig
@@ -26,14 +26,6 @@
             </div>
         </div>
     </section>
-
-    <div class="mt-2 mb-4 container d-flex justify-content-center">
-        <div class="col-10 title-info-event transparent-background-dark p-3">
-            <h3>Informations sur l'évènement:</h3>
-            <p class="pre-line">{{ challenge.information}}</p>
-        </div>
-    </div>
-
     <section class="container d-flex flex-row">
         <div class="container arrow-container col-lg-8 col-sm-12">
             <h2 class="text-center transparent-background-dark p-3" style="color: {{color}}">LES INFORMATIONS CLEFS</h2>
@@ -55,11 +47,6 @@
                             {% else %}
                             <p>Non spécifiée</p>
                             {% endif %}
-                        </div>
-                        <div class="key-info-row">
-                            <p class="mb-0"><span class="key-info">ETAPES:</span>
-                                <a class="journey-link" data-toggle="modal" data-target="#modalJourney">Voir les grandes étapes</a>
-                            </p>
                         </div>
                     </div>
                 </div>
@@ -103,43 +90,14 @@
             {% endif %}
         </div>
     </section>
-
-    {#        modal for journey pop-up#}
-    {% if challenge.journey %}
-    <div class="modal fade" id="modalJourney" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h2 style="color: {{color}}" class="modal-title" id="exampleModalLongTitle">ETAPES:</h2>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body pre-line">
-                    {{ challenge.journey}}
-                </div>
-            </div>
-        </div>
-    </div>
-    {% else %}
-    <div class="modal fade" id="modalJourney" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header align-self-center">
-                    <h2 style="color: {{color}}" class="modal-title" id="exampleModalLongTitle">ETAPES:</h2>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    {% include 'challenge/_form_challenge-invitation.html.twig' %}
-                </div>
-            </div>
+    {% if challenge.information %}
+    <div class="mt-2 mb-4 container d-flex justify-content-center">
+        <div class="col-10 title-info-event transparent-background-dark p-3">
+            <h3>Informations complémentaires sur cette aventure:</h3>
+            <p class="pre-line">{{ challenge.information }}</p>
         </div>
     </div>
     {% endif %}
-    {#       end of modal for journey pop-up#}
-
     {#        modal for challenge invitation pop-up#}
         <div class="modal fade" id="modalInvitation" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -156,7 +114,7 @@
                 </div>
             </div>
         </div>
-    {#       end of modal for journey pop-up#}
+    {#       end of modal for challenge invitation pop-up#}
 
     {#        modal for youtube video pop-up#}
     <div class="modal fade" id="youtubeLinkForm" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -235,7 +193,7 @@
                                     {% else %}
                                         <img src="{{ asset('uploads/profils/default-profil-picture.png') }}" alt="default profil picture " class="avatar-testimony">
                                     {% endif %}
-                                </a>{{ message.author.pseudo? message.author.pseudo : message.author.firstname ~' '~ message.author.lastname}}</h4>
+                                </a>{{ message.author.pseudo? message.author.pseudo : message.author.firstname }}</h4>
                             <span class="message-date">Posté le {{ message.createdAt |format_datetime(pattern="dd MMMM Y à HH'h'mm",locale='fr') }}</span>
                         </div>
                     {% endif %}
