Better form (new & edit) for challenges with better display for sports + grey background for selected sports

--- a/assets/styles/checkbox.scss
+++ b/assets/styles/checkbox.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 
 .my-sport-check {
+    background-color: grey;
     border: 3px solid theme-color-level('kblue-typo');
     border-radius: 20%;
 }
