--- a/templates/challenge/new.html.twig
+++ b/templates/challenge/new.html.twig
@@ -16,130 +16,7 @@
     <header class="arrow-header my-3 text-uppercase">
         <h1 class="mt-2">Créez votre aventure</h1>
     </header>
-    <div>
-        <div class="form-group d-flex">
-            <p class="transparent-background-dark p-2"> Les champs avec <span class="mb-0 mandatory text-kred">*</span> sont obligatoires.</p>
-        </div>
-        {{ form_start(form, {'attr': {'class': 'form-kyosc'} }) }}
-        <div class="justify-content-center list-unstyled text-center transparent-background-dark big-padding mx-4" id="sports-checkboxes">
-            <h2 class="mb-5">Choisissez un ou des sport·s <span class="mb-0 mandatory">*</span>
-            </h2>
-            {{ form_errors(form.sports) }}
-            {% for category in categories %}
-                <div class="d-flex flex-column align-items-center w-100 mt-1">
-                    <a class="journey-link-dark" data-toggle="modal" data-target="#category_{{ category.id }}">
-                        <h3 style="color: {{ category.color }}"><img src="/uploads/logo/{{ category.logo }}" class="home-carousel-logo"> Univers {{ category.name }}<br>
-                            <img src="{{ asset('build/images/fleche/fb' ~ category.name ~ '.png') }}" class="w-25">
-                        </h3>
-                    </a>
-                    <div class="modal fade" id="category_{{ category.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered" role="document">
-                            <div class="modal-content transparent-background-round-darker">
-                                <div class="d-flex flex-wrap justify-content-center align-items-center w-100">
-                                    {% for sport in form.sports.children %}
-                                        {% if sport.vars.attr['category'].id == category.id %}
-                                            <div class="favorite-sport-container d-flex flex-column align-items-center form-group cursor-pointer py-2 m-1 {{ sport.vars.checked? "my-sport-check" : "" }}"
-                                                 data-checkBoxContainer
-                                            >
-                                                <img class="img-goutte" src="/uploads/goutte/{{ sport.vars.attr['data-img'] }}" alt="{{ sport.vars.label }}">
-                                                <p class="m-0">
-                                                    <label class="m-0 text-center" for="{{ sport.vars.id }}">{{ sport.vars.label }}</label>
-                                                </p>
-                                                <div class="d-none">
-                                                    {{ form_widget(sport, {'attr': {'class': 'd-none'}}) }}
-                                                </div>
-                                                {{ form_errors(sport) }}
-                                            </div>
-                                        {% endif %}
-                                    {% endfor %}
-                                </div>
-                                <div class="d-flex justify-content-around align-items-center mb-2">
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true"><img src="{{ asset('build/images/picto/close.png') }}" class="close-picto m-2" alt="white closing cross"></span>
-                                    </button>
-                                    <button type="button" class="close btn bg-kgreen opacity-100 p-2" data-dismiss="modal" aria-label="Close">
-                                        OK
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
-        <div class="background-grey big-padding">
-            <div class="row">
-                <div class="form-group col-md-6 ">
-                    <p class="mb-0 mandatory">*</p>
-                    {{ form_errors(form.title) }}
-                    {{ form_widget(form.title) }}
-                </div>
-                <div class="form-group col-lg-6">
-                    <p class="mb-0 mandatory">*</p>
-                    {{ form_errors(form.dateStart) }}
-                    {{ form_widget(form.dateStart, { 'id': 'datepicker', 'attr': {'autocomplete': 'off'}}) }}
-                </div>
-            </div>
-            <div class="row">
-                <div class="form-group col-lg-6">
-                    {{ form_errors(form.quotation) }}
-                    {{ form_widget(form.quotation) }}
-                    {{ form_help(form.quotation) }}
-                </div>
-                <div class="fileUpload col-lg-6">
-                    {{ form_errors(form.challengePhotoFile) }}
-                    {{ form_widget(form.challengePhotoFile) }}
-                    {{ form_help(form.challengePhotoFile) }}
-                </div>
-            </div>
-            <div class="row">
-                <div class="form-group col-lg-6">
-                    <p class="mb-0 mandatory">*</p>
-                    {{ form_errors(form.description, {'attr': {'size': 8} }) }}
-                    {{ form_widget(form.description) }}
-                    {{ form_help(form.description) }}
-                </div>
-                <div class="form-group col-lg-6">
-                    <div class="form-group">
-                        <p class="mb-0 mandatory">*</p>
-                        {{ form_errors(form.location) }}
-                        {{ form_widget(form.location) }}
-                        {{ form_help(form.location) }}
-                    </div>
-                    <div class="form-group">
-                        {{ form_errors(form.distance) }}
-                        {{ form_widget(form.distance) }}
-                        {{ form_help(form.distance) }}
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="form-group col-md-6">
-                    {{ form_errors(form.information) }}
-                    {{ form_widget(form.information) }}
-                    {{ form_help(form.information) }}
-                </div>
-                <div class="form-group col-md-6">
-                    <div class="form-group">
-                        {{ form_errors(form.clans) }}
-                        {{ form_widget(form.clans) }}
-                        {{ form_help(form.clans) }}
-                    </div>
-                    <div class="form-group">
-                        {{ form_errors(form.isPublic) }}
-                        {{ form_widget(form.isPublic) }}
-                        {{ form_help(form.isPublic) }}
-                    </div>
-                </div>
-            </div>
-            <div class="d-flex justify-content-center mt-4">
-            <button type="submit" class="btn-login btn btn-lg">Valider mon aventure</button>
-            {{ form_end(form) }}
-            </div>
-        </div>
-    </div>
-
-
+    {% include ('challenge/_form.html.twig') %}
 {% endblock body %}
 
 {% block javascripts %}
